feat: mono-threaded & multi-threaded hostnic

--- a/host_nic/meson.build
+++ b/host_nic/meson.build
@@ -4,4 +4,5 @@ subdir('src')
 deps = dependency('pcap')
 includir = include_directories('include')
 
-executable('hostnic', sources, dependencies: deps, include_directories: includir)
+executable('hostnic-mono', sources_mono, dependencies: deps, include_directories: includir)
+executable('hostnic-multi', sources_multi, dependencies: deps, include_directories: includir)
