fix(build): txcore -> dxcore

--- a/gpuhostnic/src/meson.build
+++ b/gpuhostnic/src/meson.build
@@ -1,2 +1,2 @@
-sources = files('main.cpp', 'rxcore.cpp', 'txcore.cpp', 'gpuhostnic_shmem.cpp', 'utils.cpp')
+sources = files('main.cpp', 'rxcore.cpp', 'dxcore.cpp', 'gpuhostnic_shmem.cpp', 'utils.cpp')
 kernel = files('kernel.cu')
