--- a/hostnic/meson.build
+++ b/hostnic/meson.build
@@ -1,8 +1,7 @@
 project('Host-Nic', 'c')
 subdir('src')
 
-# add_global_arguments(['-D__OPTIMIZED', '-DNTHREADS=24'], language : 'c')
-add_global_arguments(['-D__OPTIMIZED', '-D__SIMSTORAGE', '-DNTHREADS=32'], language : 'c')
+add_global_arguments(['-D__OPTIMIZED', '-D__SIMSTORAGE'], language : 'c')
 
 deps = dependency('pcap')
 includir = include_directories('include')
