--- a/hostnic/src/meson.build
+++ b/hostnic/src/meson.build
@@ -1,2 +1,2 @@
-sources_mono = files('driver-mono.c', 'selcap.c', 'sighandling.c')
-sources_multi = files('driver-multi.c', 'selcap.c', 'sighandling.c')
+sources_mono = files('driver-mono.c', 'capping.c', 'sighandling.c')
+sources_multi = files('driver-multi.c', 'capping.c', 'sighandling.c')
