feat(hostnic): offline capture for multithreaded implementation (slow)

--- a/hostnic/meson.build
+++ b/hostnic/meson.build
@@ -1,8 +1,8 @@
 project('Host-Nic', 'c')
 subdir('src')
 
-# add_global_arguments(['-D__OPTIMIZED', '-D__SIMSTORAGE'], language : 'c')
-add_global_arguments(['-D__OPTIMIZED'], language : 'c')
+add_global_arguments(['-D__OPTIMIZED', '-D__SIMSTORAGE'], language : 'c')
+# add_global_arguments(['-D__OPTIMIZED'], language : 'c')
 
 deps = dependency('pcap')
 includir = include_directories('include')
